test/resources/parser/failing/zomtest11.scala
object MissingParamType {
  def func(x): Int = { x }
}